--- a/Airbnb_NYC_Storytelling.ipynb
+++ b/Airbnb_NYC_Storytelling.ipynb
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "6dbcf235",
    "metadata": {},
    "outputs": [],
@@ -1507,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "8603c5ff",
    "metadata": {},
    "outputs": [
@@ -1549,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "id": "78b37739",
    "metadata": {},
    "outputs": [
@@ -1734,7 +1734,7 @@
        "20555                               1                 0     NaN    NaN  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1746,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "54998759",
    "metadata": {},
    "outputs": [
@@ -1770,10 +1770,11 @@
        "calculated_host_listings_count        0\n",
        "availability_365                      0\n",
        "Year                              10052\n",
+       "Month                             10052\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1784,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "211d8ef9",
    "metadata": {},
    "outputs": [
@@ -1800,7 +1801,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1812,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "70872ff4",
    "metadata": {},
    "outputs": [
@@ -1834,7 +1835,7 @@
        "Name: count, Length: 221, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1846,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "60fb40e7",
    "metadata": {},
    "outputs": [
@@ -1860,7 +1861,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1872,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "f3719ad3",
    "metadata": {},
    "outputs": [
@@ -1882,7 +1883,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1904,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "e7b16d2d",
    "metadata": {},
    "outputs": [
@@ -1926,7 +1927,7 @@
        "Name: count, Length: 109, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1937,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "7d9609c1",
    "metadata": {},
    "outputs": [
@@ -1947,7 +1948,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1968,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "97f38afe",
    "metadata": {},
    "outputs": [
@@ -1978,7 +1979,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1999,7 +2000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "f59512d4",
    "metadata": {},
    "outputs": [
@@ -2009,7 +2010,7 @@
        "5.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2020,7 +2021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "043e5900",
    "metadata": {},
    "outputs": [
@@ -2030,7 +2031,7 @@
        "23.274465691788528"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2041,7 +2042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "2bb9f6e4",
    "metadata": {},
    "outputs": [
@@ -2051,7 +2052,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2067,16 +2068,21 @@
     }
    ],
    "source": [
+    "# \n",
     "df.calculated_host_listings_count.plot.box()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "c816d661",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Export dataframe to .csv\n",
+    "\n",
+    "df.to_csv('Airbnb_NYC_final.csv')"
+   ]
   },
   {
    "cell_type": "code",
@@ -2109,57 +2115,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "e109e259",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     1\n",
-       "1     1\n",
-       "2     6\n",
-       "3     6\n",
-       "4     6\n",
-       "5     6\n",
-       "6     6\n",
-       "7     6\n",
-       "8     2\n",
-       "9     2\n",
-       "10    1\n",
-       "11    2\n",
-       "12    2\n",
-       "13    1\n",
-       "14    1\n",
-       "15    1\n",
-       "16    1\n",
-       "17    2\n",
-       "18    2\n",
-       "19    2\n",
-       "20    2\n",
-       "21    2\n",
-       "22    2\n",
-       "23    1\n",
-       "24    1\n",
-       "25    1\n",
-       "26    1\n",
-       "27    1\n",
-       "28    1\n",
-       "29    1\n",
-       "Name: calculated_host_listings_count, dtype: int64"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.calculated_host_listings_count.head(30)"
-   ]
   },
   {
    "cell_type": "code",
